--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
-    <title>시간표</title>
+    <title>강부식 시간표</title>
 </head>
 <body>
     <h3>2학기 시간표</h3>
