--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>강부식 시간표</title>
 </head>
 <body>
+    <h1>Hello word</h1>
+    <p>
     <h3>2학기 시간표</h3>
     <hr>
     <table border="1" width="700">
