--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
+    <a href ="Busik-Kang.github.io/">
     <title>강부식 시간표</title>
 </head>
 <body>
