--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
-    <a href ="Busik-Kang.github.io/">
+    <a href ="Busik-Kang.github.io/join.html">여기 링크가자</a>
     <title>강부식 시간표</title>
 </head>
 <body>
