--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>강부식 시간표</title>
 </head>
 <body>
-    <a href ="Busik-Kang.github.io/join.html">여기 링크가자</a>
+    <a href="join.html">여기 링크가자</a>
     <h1>Hello word</h1>
     <p>
     <h3>2학기 시간표</h3>
