--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>강부식 시간표</title>
 </head>
 <body>
-    <a href="www.naver.com">네이버가자</a>
+    <a href="https://www.naver.com/">네이버가자11111</a>
     <h1>Hello word</h1>
     <p>
     <h3>2학기 시간표</h3>
