--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">    
    
-    <title>강부식 시간표</title>
+    <title>블러그</title>
 </head>
 <body>
-    <a href="join.html">회원 가입</a>       
+    <a href="join.html">회원 가입</a>
+    <a href="2022-2timetable.html">2022년 2학기 시간표</a>
 </body>
 </html>
