--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="join.html">회원 가입</a>
-    <a href="2022-2timetable.html">2022년 2학기 시간표</a>
+    <a href="2022-2tiime_table.html">2022년 2학기 시간표</a>
 </body>
 </html>
