--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="2022-2tiime_table.html">2022년 2학기 시간표</a>
         </li>
+        <li>
+            <a href="5week_Training1.html">5주차 실습 1번</a>
+        </li>
     </ul>
        
 </body>
