5주차 실습2번 3번 업데이트

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <li>
             <a href="5week_Training1.html">5주차 실습 1번</a>
         </li>
+        <li>
+            <a href="5week_Training2.html">5주차 실습 2번</a>
+        </li>
+        <li>
+            <a href="5week_Training3.html">5주차 실습 3번</a>
+        </li>
     </ul>
        
 </body>
