하이퍼링크 새로운창으로

--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
             <a href="join.html">회원 가입</a>
         </li>
         <li>
-            <a href="2022-2tiime_table.html">2022년 2학기 시간표</a>
+            <a href="2022-2tiime_table.html" target="_blank">2022년 2학기 시간표</a>
         </li>
         <li>
-            <a href="5week_Training1.html">5주차 실습 1번</a>
+            <a href="5week_Training1.html" target="_blank">5주차 실습 1번</a>
         </li>
         <li>
-            <a href="5week_Training2.html">5주차 실습 2번</a>
+            <a href="5week_Training2.html" target="_blank">5주차 실습 2번</a>
         </li>
         <li>
-            <a href="5week_Training3.html">5주차 실습 3번</a>
+            <a href="5week_Training3.html" target="_blank">5주차 실습 3번</a>
         </li>
-    </ul>
-       
+    </ul>       
 </body>
 </html>
