--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 -->
 <html>
 	<head>
-		<title>초보공돌이의 깃 블러그</title>
-		<meta charset="utf-8" />
+		<title>Halcyonic by HTML5 UP</title>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=Nanum+Gothic:wght@800&display=swap');
+		</style>
+		<meta charset="ko" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -16,27 +19,22 @@
 
 			<!-- Header -->
 				<section id="header">
-					<div class="container">
+					<div class="container"> <!--컨테이너 클래스가 창 크게에 따라서 배치를 수정해줌-->
 						<div class="row">
-							<div class="col-12">
-
-								<!-- Logo -->
-									<h1><a href="index.html" id="logo">kbs</a></h1>
-
-								<!-- Nav -->
-									<nav id="nav">
-										<a href="index.html">나는 누구인가?</a>
-										<a href="threecolumn.html">창원대 산업대학원</a>
-										<a href="twocolumn1.html">내가 개발한 제품</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-									</nav>
-
+							<!-- Logo -->
+								<h1><a href="index.html" id="logo"><img src="images/logo.gif" width="120" alt="logo"></a></h1>
+							<!-- Nav -->
+								<nav id="nav">
+									<a href="index.html">DAILY GRIND</a>
+									<a href="threecolumn.html">GRADUATE SCHOOL</a>
+									<a href="twocolumn1.html">TEST3</a>
+									<a href="twocolumn2.html">TEST42</a>
+									<a href="onecolumn.html">graduate school</a>
+								</nav>
 							</div>
-						</div>
 					</div>
 					<div id="banner">
-						<div class="container">
+						<div class="container"> <!--컨테이너 클래스가 창 크게에 따라서 배치를 수정해줌-->
 							<div class="row">
 								<div class="col-6 col-12-medium">
 
