--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 			<!-- Header -->
 				<section id="header">
+					
 					<div class="container"> <!--컨테이너 클래스가 창 크게에 따라서 배치를 수정해줌-->
 						<div class="row">
 							<!-- Logo -->
-								<h1><a href="index.html" id="logo"><img src="images/logo.gif" width="120" alt="logo"></a></h1>
+								<h1><a href="index.html" id="logo" class="logoImg"></a>kbs</h1>
 							<!-- Nav -->
 								<nav id="nav">
 									<a href="index.html">DAILY GRIND</a>
@@ -39,14 +40,14 @@
 								<div class="col-6 col-12-medium">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+										<p>비둘기가 날기 위해서 꼭 날개를 사용할 필요는 없다. 코드도 마찬가지다 돌아가기만하면된다!!</p>
 										<a href="#" class="button-large">Go on, click me!</a>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/logo.gif" alt="" /></a>
 
 								</div>
 							</div>
