상단 메뉴 텍스트 변경

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 								<nav id="nav">
 									<a href="index.html">DAILY GRIND</a>
 									<a href="threecolumn.html">GRADUATE SCHOOL</a>
-									<a href="twocolumn1.html">TEST3</a>
-									<a href="twocolumn2.html">TEST42</a>
+									<a href="twocolumn1.html">회사 생활</a>
+									<a href="twocolumn2.html">앞으로 할 계획</a>
 									<a href="onecolumn.html">graduate school</a>
 								</nav>
 							</div>
@@ -47,7 +47,7 @@
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/logo.gif" alt="" /></a>
+										<!-- <a href="#" class="bordered-feature-image"><img src="images/logo.gif" alt="비둘기 사진"></a> -->
 
 								</div>
 							</div>
