--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<!-- <a href="#" class="bordered-feature-image"><img src="images/logo.gif" alt="비둘기 사진"></a> -->
+										<a href="#" class="bordered-feature-image"><img src="images/logo.gif" alt="비둘기 사진"></a>
 
 								</div>
 							</div>
