--- a/changwon/webprograming/6week/6week_homework.html
+++ b/changwon/webprograming/6week/6week_homework.html
@@ -10,7 +10,10 @@
     <form>
         <fieldset>
             <legend>Login</legend>
-            Username : <input type="text"> &nbsp; Password : <input type="password">
+            <label for="Username">Username</label>
+            <input id="Username" type="text"> &nbsp;
+            <label for="Password">Password</label>
+            <input id="Password" type="password">
         </fieldset>
     </form>
 </body>
