--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>강식이의 개발도상국</title>		
 		<meta charset="ko">		
-		<link rel="stylesheet" href="css\bootstrap.css" />
+		<link rel="stylesheet" href=css\bootstrap-grid.css />
 	</head>
 	<body>
 		<!--Header 영역-->		
