--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <html>
 	<head>
 		<title>강식이의 개발도상국</title>		
-		<meta charset="ko">		
-		<link rel="stylesheet" href=css\bootstrap-grid.css />
+		<meta charset="UTF-8">		
+		<link rel="stylesheet" href="css\bootstrap_grid.css" />
+		<link rel="short icon" href="#" />
 	</head>
 	<body>
 		<!--Header 영역-->		
@@ -18,12 +19,12 @@
 					<div class="col-4">
 						<h1>
 							<a href="#">kbs</a>
-						</h1>
+						</h1>												
 						<nav class="nav">
 							<a href="#">학업</a>
 							<a href="#">직장</a>
 							<a href="#">계획</a>
-							<a href="#">양세와의 ???</a>
+							<a href="#">추억</a>							
 						</nav>
 					</div>					
 				</div>
