--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 									<li class="current"><a href="index.html">Welcome</a></li>
 									<!-- 학업 -->
 									<li>
-										<a href="#">학업</a>
+										<a href="#">창원대 산업대학원</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">1학기(22년 후기)</a></li>											
 											<li>
 												<a href="#">Phasellus consequat</a>
 												<ul>
@@ -139,7 +138,7 @@
 							<div class="col-6 col-12-medium">
 								<ul>
 									<li style="text-align: center;"><img src="images/Helipigeon.gif" alt="둘기콥터"></li>
-									<li style="text-align: center; font-size:20px; font-weight:bold; color:tomato">내가 작성한 <span style="font-style: italic;">코드의 동작</span></li>
+									<li style="text-align: center; font-size:20px; font-weight:bold; color:tomato; font-style: italic;">날아가자!</li>
 								</ul>
 								
 								<!-- <ul>
