--- a/index.html
+++ b/index.html
@@ -49,77 +49,36 @@
 									<li class="current"><a href="index.html">Welcome</a></li>
 									<!-- 학업 -->
 									<li>
-										<a href="#">창원대 산업대학원</a>
+										<a href="#">학업</a>
 										<ul>
-											<li><a href="#">1학기(22년 후기)</a></li>											
-											<li>
-												<a href="#">Phasellus consequat</a>
+											<li><a href="#">창원대 산업대학원</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="#">1학기(22년 후기)</a></li>
 												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											</li>																																	
 										</ul>
 									</li>
 									<!-- 직장 -->
 									<li>
 										<a href="#">직장</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">22년도</a></li>											
 										</ul>
 									</li>
 									<!-- 취미 -->
 									<li>
 										<a href="#">취미</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">게임</a></li>
+											<li><a href="#">낚시</a></li>											
 										</ul>
 									</li>
 									<!-- 미래 -->
 									<li>
 										<a href="#">미래</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-
-
+											<li><a href="#">Firmware</a></li>
+											<li><a href="#">Deep Learning</a></li>
 								</ul>
 							</nav>
 
@@ -138,13 +97,8 @@
 							<div class="col-6 col-12-medium">
 								<ul>
 									<li style="text-align: center;"><img src="images/Helipigeon.gif" alt="둘기콥터"></li>
-									<li style="text-align: center; font-size:20px; font-weight:bold; color:tomato; font-style: italic;">날아가자!</li>
+									<li style="text-align: center; font-size:35px; font-weight:bold; color:tomato; font-style: italic;">날아가자!</li>
 								</ul>
-								
-								<!-- <ul>
-									<li><a href="#" class="button large icon solid fa-arrow-circle-right">Ok let's go</a></li>
-									<li><a href="#" class="button alt large icon solid fa-question-circle">More info</a></li>
-								</ul> -->
 							</div>
 						</div>
 					</div>
@@ -154,44 +108,40 @@
 				<div id="features-wrapper">
 					<div class="container">
 						<div class="row">
-							<div class="col-4 col-12-medium">
+							<div class="col-3 col-12-medium">
 
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>Put something here</h2>
-												<p>Maybe here as well I think</p>
-											</header>
+										<div class="inner">											
+											<h2>학업</h2>
+											<p>Maybe here as well I think</p>											
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
 									</section>
 
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-3 col-12-medium">
 
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>An interesting title</h2>
-												<p>This is also an interesting subtitle</p>
-											</header>
+										<div class="inner">											
+											<h2>직장</h2>
+											<p>Maybe here as well I think</p>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
 										</div>
 									</section>
 
 							</div>
-							<div class="col-4 col-12-medium">
+							<div class="col-3 col-12-medium">
 
 								<!-- Box -->
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Oh, and finally ...</h2>
+												<h2>취미</h2>
 												<p>Here's another intriguing subtitle</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
@@ -199,6 +149,24 @@
 									</section>
 
 							</div>
+
+							<div class="col-3 col-12-medium">
+
+								<!-- Box -->
+									<section class="box feature">
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<div class="inner">
+											<header>
+												<h2>미래</h2>
+												<p>Here's another intriguing subtitle</p>
+											</header>
+											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										</div>
+									</section>
+
+							</div>
+
+
 						</div>
 					</div>
 				</div>
