--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>강형의 개발새발</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발도상국</a></h1>								
+								<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발새발</a></h1>								
 							</div>
 
 						<!-- Nav -->
