--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">											
-											<h2>학업</h2>
-											<p>Maybe here as well I think</p>											
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<h2>학업</h2>											
+											<p>내 머리는 돌(SILICON)이다</p> 
+											<p>그래서 CPU(SILICON)을 배운다</p>
 										</div>
 									</section>
 
@@ -128,8 +128,7 @@
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<div class="inner">											
 											<h2>직장</h2>
-											<p>Maybe here as well I think</p>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>내가 벌어 먹고 사는 방법</p>
 										</div>
 									</section>
 
