홈페이지 업로드

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\study.png" alt="" /></a>
 										<div class="inner">											
 											<h2>학업</h2>											
 											<p>내 머리는 돌(SILICON)이다</p> 
 											<p>그래서 CPU(SILICON)을 배운다</p>
+											<br>
 										</div>
 									</section>
 
@@ -125,10 +126,11 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\job.jpg" alt="" /></a>
 										<div class="inner">											
 											<h2>직장</h2>
 											<p>내가 벌어 먹고 사는 방법</p>
+											<br><br>
 										</div>
 									</section>
 
@@ -137,13 +139,11 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>취미</h2>
-												<p>Here's another intriguing subtitle</p>
-											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										<a href="#" class="image featured"><img src="images\hobby.jpg" alt="" /></a>
+										<div class="inner">											
+											<h2>취미</h2>
+											<p>나는 한량이 되고 싶다</p>											
+											<p>돈 많은 한량으로 취미를 즐기고 싶다</p>
 										</div>
 									</section>
 
@@ -153,13 +153,12 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>미래</h2>
-												<p>Here's another intriguing subtitle</p>
-											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										<a href="#" class="image featured"><img src="images\feature.jpg" alt="" /></a>
+										<div class="inner">											
+											<h2>미래</h2>											
+											<p>휴먼</p>
+											<p>나에게 데이터를 주십시오</p>
+											<br>
 										</div>
 									</section>
 
