--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\study.png" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\study.png" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>학업</h2>											
 											<p>내 머리는 돌(SILICON)이다</p> 
@@ -126,7 +126,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\job.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\job.png" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>직장</h2>
 											<p>내가 벌어 먹고 사는 방법</p>
@@ -139,7 +139,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\hobby.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\hobby.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>취미</h2>
 											<p>나는 한량이 되고 싶다</p>											
@@ -153,7 +153,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\feature.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images\feature.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>미래</h2>											
 											<p>휴먼</p>
@@ -176,13 +176,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>직장 관련 사이트</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<li><a href="https://stackoverflow.com/" target="_blank" style="text-decoration: none">나의 백과 사전</a></li>
 										</ul>
 									</section>
 
@@ -191,13 +187,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>학업 관련 사이트</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<li><a href="https://ecampus.changwon.ac.kr/login.php" target="_blank" style="text-decoration: none">창원대 e캠퍼스</a></li>
 										</ul>
 									</section>
 
@@ -206,13 +198,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>미래 관련 사이트</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<li><a href="https://teachablemachine.withgoogle.com/" target="_blank" style="text-decoration: none">Teachable Machine</a></li>
 										</ul>
 									</section>
 
@@ -221,17 +209,9 @@
 
 								<!-- Contact -->
 									<section class="widget contact last">
-										<h3>Contact Us</h3>
-										<ul>
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										<h3>Contact Me</h3>										
+										<p>개발새발 개발하는 강형<br />
+										sjenrdj@gmail.com<br /> </p>										
 									</section>
 
 							</div>
@@ -240,7 +220,7 @@
 							<div class="col-12">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										<li>&copy; kbs. All rights 개발새발 강형</li><li>Design: 개발새발 강형</li>
 									</ul>
 								</div>
 							</div>
