--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			font-family:"TitleFont";
 			 src:url("./font/titleFont.woff") format("trueType");
 		}
- </style>
+ 		</style>
 
 	</head>
 	<body class="is-preload homepage">
@@ -62,7 +62,7 @@
 									<li>
 										<a href="#">직장</a>
 										<ul>
-											<li><a href="#">22년도</a></li>											
+											<li><a href="job_main.html">15년~20년</a></li>											
 										</ul>
 									</li>
 									<!-- 취미 -->
@@ -126,7 +126,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\job.png" style="max-width:100%; height: auto;" alt="" /></a>
+										<a href="job_main.html" class="image featured"><img src="images\job.png" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>직장</h2>
 											<p>내가 벌어 먹고 사는 방법</p>
