--- a/job_main.html
+++ b/job_main.html
@@ -81,17 +81,12 @@
 									<hr class="my-hr">
 									<h3>프로젝트 요약</h3>
 									<ul>
-										<li>Hardware 설계</li>
+										<li>Hardware 설계</li>											
 										<li>Firmware 설계</li>
 										<li>Debugging</li>
 									</ul>
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+									<p>도로를(Hardware 설계) 만들어 자동차들이(전류) 신호등의(Firmware) 지시에 따라 문제 없이(Debugging) 목적지까지 무사히 가게 하는 작은도시를(PCB) 개발하는 땜쟁이 강형 입니다.</p>
 
 								</article>
 
