드릴쉽 완성

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<div id="logo">
 								<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발새발</a></h1>								
 							</div>
-
+							
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
@@ -62,7 +62,8 @@
 									<li>
 										<a href="#">직장</a>
 										<ul>
-											<li><a href="job_main.html">15년~20년</a></li>											
+											<li><a href="job_main.html">15년~20년</a></li>
+											<li><a href="job_main.html">21년~현재</a></li>
 										</ul>
 									</li>
 									<!-- 취미 -->
@@ -79,6 +80,7 @@
 										<ul>
 											<li><a href="#">Firmware</a></li>
 											<li><a href="#">Deep Learning</a></li>
+										</ul>
 								</ul>
 							</nav>
 
