--- a/job_main.html
+++ b/job_main.html
@@ -44,7 +44,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발새발</a></h1>											
+								<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발새발</a></h1>							
 							</div>
 
 						<!-- Nav -->
@@ -53,13 +53,15 @@
 									<li>										
 										<a href="#">15년~20년</a>
 										<ul>
-											<li><a href="#">드릴쉽 엔진 제어 프로젝트</a></li>
+											<li><a href="pj1_drillShip.html">드릴쉽 엔진 제어 프로젝트</a></li>
 											<li><a href="#">COPT 프로젝트</a></li>
 											<li><a href="#">Helideck 프로젝트</a></li>
 											<li><a href="#">육상발전기 프로젝트</a></li>
 											<li><a href="#">AVSS 프로젝트</a></li>
 											<li><a href="#">데이터 수집장치 프로젝트</a></li>
 										</ul>
+									</li>
+									<li>
 										<a href="#">21년~현재</a>
 									</li>
 								</ul>
@@ -79,15 +81,74 @@
 									<h2>강형의 개발새발 직업 이야기</h2>
 									<p>안녕하세요. 강형이 15년부터 진행 했던 프로젝트를 모아둔 페이지입니다.</p>
 									<hr class="my-hr">
-									<h3>프로젝트 요약</h3>
-									<ul>
-										<li>Hardware 설계</li>											
-										<li>Firmware 설계</li>
-										<li>Debugging</li>
-									</ul>
+									<br>
+									<h3>&nbsp; 프로젝트 요약</h3>									
+									<!-- Features -->
+									<div id="features-wrapper">
+										<div class="container">
+											<div class="row">
 
-									<p>도로를(Hardware 설계) 만들어 자동차들이(전류) 신호등의(Firmware) 지시에 따라 문제 없이(Debugging) 목적지까지 무사히 가게 하는 작은도시를(PCB) 개발하는 땜쟁이 강형 입니다.</p>
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hardware.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">
+																<h2>Hardware</h2>
+																<p>도로 설계</p>
+															</div>
+														</section>
+												</div>
 
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="job_main.html" class="image featured"><img src="images\firmware.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2>Firmware</h2>
+																<p>신호등</p>											
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\pcb.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2>PCB</h2>											
+																<p>개통</p>
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\debugging.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2>Debugging</h2>
+																<p>감리</p>																						
+															</div>
+														</section>
+												</div>							
+
+											</div>
+										</div>
+									</div>
+									<hr class="my-hr">
+									<br>
+									<p style="margin-bottom: 2px; text-align: center;"><b style="font-size: 25px;">도로</b>를 만들어 자동차들이(전류) <b style="font-size: 25px;">신호등</b>의 지시에 따라 <b style="font-size: 25px;">문제 없이</b> 목적지까지 무사히 가게 하는</p>
+									<div class="parent">
+										<div class="task-tooltip1">Hardware 설계</div>
+										<div class="task-tooltip2">Firmware</div>
+										<div class="task-tooltip3">Debugging</div>
+									</div>
+									<br>
+									<br>
+									<p style="text-align: center;"><b style="font-size: 25px;">작은도시</b>를 개발하는 땜쟁이 강형 입니다.</p>
+									<div class="parent">
+										<div class="task-tooltip4">PCB</div>										
+									</div>
 								</article>
 
 						</div>
