직업 작성 완료

--- a/job_main.html
+++ b/job_main.html
@@ -54,11 +54,11 @@
 										<a href="#">15년~20년</a>
 										<ul>
 											<li><a href="pj1_drillShip.html">드릴쉽 엔진 제어 프로젝트</a></li>
-											<li><a href="#">COPT 프로젝트</a></li>
-											<li><a href="#">Helideck 프로젝트</a></li>
-											<li><a href="#">육상발전기 프로젝트</a></li>
-											<li><a href="#">AVSS 프로젝트</a></li>
-											<li><a href="#">데이터 수집장치 프로젝트</a></li>
+											<li><a href="pj2_CPOT.html">COPT 프로젝트</a></li>
+											<li><a href="pj3_helideck.html">Helideck 프로젝트</a></li>
+											<li><a href="pj4_onshore.html">육상발전기 프로젝트</a></li>
+											<li><a href="pj5_avss.html">AVSS 프로젝트</a></li>
+											<li><a href="pj6_data.html">데이터 수집장치 프로젝트</a></li>
 										</ul>
 									</li>
 									<li>
