--- a/pj4_onshore.html
+++ b/pj4_onshore.html
@@ -88,10 +88,10 @@
 											<h3>&nbsp; 목차</h3>
 											<span  id="nav2">
 												<ul style="list-style: none;">
-													<li class="current"><a href="pj1_drillShip.html" style="text-decoration: none">드릴쉽 엔진 제어 프로젝트</a></li>
+													<li><a href="pj1_drillShip.html" style="text-decoration: none">드릴쉽 엔진 제어 프로젝트</a></li>
 													<li><a href="pj2_CPOT.html" style="text-decoration: none">COPT 프로젝트</a></li>
 													<li><a href="pj3_helideck.html" style="text-decoration: none">Helideck 프로젝트</a></li>
-													<li><a href="pj4_onshore.html" style="text-decoration: none">육상발전기 프로젝트</a></li>
+													<li class="current"><a href="pj4_onshore.html" style="text-decoration: none">육상발전기 프로젝트</a></li>
 													<li><a href="pj5_avss.html" style="text-decoration: none">AVSS 프로젝트</a></li>
 													<li><a href="pj6_data.html" style="text-decoration: none">데이터 수집장치 프로젝트</a></li>
 												</ul>
@@ -105,16 +105,16 @@
 									<!-- Content -->
 										<article>
 
-											<h2>드릴쉽 엔진 제어 프로젝트</h2>
+											<h2>육상용발전기 프로젝트</h2>
 											<h3>개요</h3>
-											<p>국책사업 일환으로 진행 </p>
-											<p style="margin-top: -5%;">프로젝트 수행기간: 2015.07~2016.07 (1년)</p>
+											<p>육상용 발전 엔진 제어를 위한 모듈 개발</p>
+											<p style="margin-top: -5%;">프로젝트 수행기간: 2017.03~2018.04 (9개월)</p>
 
 											<h3>결과물</h3>
 											<div class="row">
 												<div class="col-10 col-12-medium">
 													<section class="box feature">
-														<img src="images\pj1.png" style="max-width:100%; height: auto;" alt="" />
+														<img src="images\pj4.jpg" style="max-width:100%; height: auto;" alt="" />
 													</section>
 											</div>
 											
