--- a/pj1_drillShip.html
+++ b/pj1_drillShip.html
@@ -114,7 +114,7 @@
 											<div class="row">
 												<div class="col-10 col-12-medium">
 													<section class="box feature">
-														<img src="images\pj1.png" style="max-width:100%; height: auto;" alt="" />
+														<img src="images\pj1.jpg" style="max-width:100%; height: auto;" alt="" />
 													</section>
 											</div>
 											
