--- a/21year.html
+++ b/21year.html
@@ -95,8 +95,8 @@
 
 						<nav id="nav3" style="margin-top: 4%; margin-right: 10%;">
 							<ul>
-								<li class="current"><a href="pj1_drillShip.html">15년~20년</a></li>
-								<li><a href="21year.html">21년~현재</a></li>
+								<li><a href="pj1_drillShip.html">15년~20년</a></li>
+								<li  class="current"><a href="21year.html">21년~현재</a></li>
 							</ul>
 						</nav>
 
@@ -116,12 +116,7 @@
 											<h3>&nbsp; 목차</h3>
 											<span  id="nav2">
 												<ul style="list-style: none;">
-													<li><a href="pj1_drillShip.html" style="text-decoration: none">드릴쉽 엔진 제어 프로젝트</a></li>
-													<li><a href="pj2_CPOT.html" style="text-decoration: none">COPT 프로젝트</a></li>
-													<li><a href="pj3_helideck.html" style="text-decoration: none">Helideck 프로젝트</a></li>
-													<li><a href="pj4_onshore.html" style="text-decoration: none">육상발전기 프로젝트</a></li>
-													<li class="current"><a href="pj5_avss.html" style="text-decoration: none">AVSS 프로젝트</a></li>
-													<li><a href="pj6_data.html" style="text-decoration: none">데이터 수집장치 프로젝트</a></li>
+													<li class="current"><a href="#" style="text-decoration: none">작성 예정</a></li>
 												</ul>
 										</span>
 										</section>
@@ -133,16 +128,15 @@
 									<!-- Content -->
 										<article>
 
-											<h2>AVSS 프로젝트</h2>
+											<h2>작성 예정</h2>
 											<h3>개요</h3>
-											<p>Cargo선박의 유류 선적 및 하적을 할 때에 진공펌프를 제어하는 모듈 </p>
-											<p style="margin-top: -5%;">프로젝트 수행기간: 2017.03~2018.04 (9개월)</p>
+											<p>조만간 open 합니다~ </p>											
 
 											<h3>결과물</h3>
 											<div class="row">
 												<div class="col-10 col-12-medium">
 													<section class="box feature">
-														<img src="images\pj5.jpg" style="max-width:100%; height: auto;" alt="" />
+														<img src="" style="max-width:100%; height: auto;" alt="" />
 													</section>
 											</div>
 											
