--- a/index.html
+++ b/index.html
@@ -49,38 +49,38 @@
 									<li class="current"><a href="index.html">Welcome</a></li>
 									<!-- 학업 -->
 									<li>
-										<a href="#">학업</a>
-										<ul>
+										<a href="study.html">학업</a>
+										<!-- <ul>
 											<li><a href="#">창원대 산업대학원</a>
 												<ul>
 													<li><a href="#">1학기(22년 후기)</a></li>
 												</ul>
-											</li>																																	
-										</ul>
+											</li>																												
+										</ul> -->
 									</li>
 									<!-- 직장 -->
 									<li>
-										<a href="#">직장</a>
-										<ul>
+										<a href="job_main.html">직장</a>
+										<!-- <ul>
 											<li><a href="job_main.html">15년~20년</a></li>
-											<li><a href="job_main.html">21년~현재</a></li>
-										</ul>
+											<li><a href="21year.html">21년~현재</a></li>
+										</ul> -->
 									</li>
 									<!-- 취미 -->
 									<li>
-										<a href="#">취미</a>
-										<ul>
+										<a href="hobby.html">일상 생활</a>
+										<!-- <ul>
 											<li><a href="#">게임</a></li>
 											<li><a href="#">낚시</a></li>											
-										</ul>
+										</ul> -->
 									</li>
 									<!-- 미래 -->
 									<li>
-										<a href="#">미래</a>
-										<ul>
+										<a href="future.html">미래</a>
+										<!-- <ul>
 											<li><a href="#">Firmware</a></li>
 											<li><a href="#">Deep Learning</a></li>
-										</ul>
+										</ul> -->
 								</ul>
 							</nav>
 
@@ -94,7 +94,8 @@
 							<div class="col-1 col-12-medium"></div> <!--왼쪽 공백을 주기 위함-->
 							<div class="col-5 col-12-medium">
 								<h2>안녕하세요.</h2>
-								<p><br>개발새발 개발하는<br> 강형입니다</p>
+								<p><br><span style="font-family: TitleFont;">개발새발</span> 개발하는
+								<br> 강형입니다</p>
 							</div>
 							<div class="col-6 col-12-medium">
 								<ul>
@@ -210,11 +211,11 @@
 							<div class="col-3 col-6-medium col-12-small">
 
 								<!-- Contact -->
-									<section class="widget contact last">
-										<h3>Contact Me</h3>										
-										<p>개발새발 개발하는 강형<br />
-										sjenrdj@gmail.com<br /> </p>										
-									</section>
+								<section class="widget contact last">
+									<h3>Contact Me</h3>										
+									<p>sjenrdj@gmail.com<br />
+									개발새발 개발하는 강형<br /> </p>										
+								</section>
 
 							</div>
 						</div>
