--- a/hobby.html
+++ b/hobby.html
@@ -63,15 +63,15 @@
 									</ul> -->
 								</li>
 								<!-- 직장 -->
-								<li class="current">
-									<a href="job_main.html">직장</a>										
+								<li>
+									<a href="job_main.html">직장</a>
 									<!-- <ul>
 										<li><a href="job_main.html">15년~20년</a></li>
 										<li><a href="21year.html">21년~현재</a></li>
 									</ul> -->
 								</li>
 								<!-- 취미 -->
-								<li>
+								<li class="current">
 									<a href="hobby.html">일상 생활</a>
 									<!-- <ul>
 										<li><a href="#">게임</a></li>
@@ -84,20 +84,12 @@
 									<!-- <ul>
 										<li><a href="#">Firmware</a></li>
 										<li><a href="#">Deep Learning</a></li>
-									</ul> -->																		
-							</ul>							
-						</nav>
-
-						<nav id="nav3" style="margin-top: 4%; margin-right: 10%;">
-							<ul>
-								<li><a href="pj1_drillShip.html">15년~20년</a></li>
-								<li><a href="21year.html">21년~현재</a></li>
+									</ul> -->
 							</ul>
 						</nav>
 
-
-					</header>
-				</div>
+				</header>
+			</div>
 
 			<!-- Main -->
 				<div id="main-wrapper">
@@ -107,11 +99,11 @@
 							<!-- Content -->
 								<article>
 
-									<h2>강형의 개발새발 직업 이야기</h2>
-									<p>안녕하세요. 강형이 15년부터 진행 했던 프로젝트를 모아둔 페이지입니다.</p>
+									<h2>강형의 개발새발 일상 생활 이야기</h2>
+									<p>안녕하세요. 강형의 소소한 생활입니다.</p>
 									<hr class="my-hr">
 									<br>
-									<h3>&nbsp; 강형이 하는 일</h3>
+									<h3>&nbsp; 강형의 갤러리</h3>
 									<!-- Features -->
 									<div id="features-wrapper">
 										<div class="container">
@@ -120,10 +112,9 @@
 												<div class="col-3 col-12-medium">
 													<!-- Box -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images\hardware.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<a href="#" class="image featured"><img src="images\hobby\hobby1.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">
-																<h2>Hardware</h2>
-																<p>도로 설계</p>
+																<h2 style="margin-top: -20%; text-align: center;">가상 게임</h2>
 															</div>
 														</section>
 												</div>
@@ -131,10 +122,9 @@
 												<div class="col-3 col-12-medium">
 													<!-- Box -->
 														<section class="box feature">
-															<a href="job_main.html" class="image featured"><img src="images\firmware.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<a href="#" class="image featured"><img src="images\hobby\hobby2.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2>Firmware</h2>
-																<p>신호등</p>											
+																<h2 style="margin-top: -20%; text-align: center;">자전거</h2>																
 															</div>
 														</section>
 												</div>
@@ -142,10 +132,9 @@
 												<div class="col-3 col-12-medium">
 													<!-- Box -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images\pcb.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<a href="#" class="image featured"><img src="images\hobby\hobby9.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2>PCB</h2>											
-																<p>개통</p>
+																<h2 style="margin-top: -20%; text-align: center;">음향</h2>
 															</div>
 														</section>
 												</div>
@@ -153,30 +142,118 @@
 												<div class="col-3 col-12-medium">
 													<!-- Box -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images\debugging.png" style="max-width:100%; height: auto;" alt="" /></a>
+															<a href="#" class="image featured"><img src="images\hobby\hobby4.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2>Debugging</h2>
-																<p>감리</p>																						
+																<h2 style="margin-top: -20%; text-align: center;">캠핑</h2>
 															</div>
 														</section>
-												</div>							
+												</div>
 
 											</div>
+
+
+
+
+											<div class="row">
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\hobby6.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">
+																<h2 style="margin-top: -20%; text-align: center;">물고기 납치</h2>
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\hobby7.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">곤충 납치</h2>																
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\hobby8.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">새 납치</h2>
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\cat.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">고양이 납치</h2>
+															</div>
+														</section>
+												</div>
+
+											</div>
+
+
+
+											<div class="row">
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\monkey.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">
+																<h2 style="margin-top: -20%; text-align: center;">원숭이 납치</h2>
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\wedding.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">와이프 납치</h2>																
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\ship.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">배 납치</h2>
+															</div>
+														</section>
+												</div>
+
+												<div class="col-3 col-12-medium">
+													<!-- Box -->
+														<section class="box feature">
+															<a href="#" class="image featured"><img src="images\hobby\keyboard.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+															<div class="inner">											
+																<h2 style="margin-top: -20%; text-align: center;">키보드 정비</h2>
+															</div>
+														</section>
+												</div>
+
+											</div>
+
+
+
+
+
+
+
+
+
+
 										</div>
-									</div>
-									<hr class="my-hr">
-									<br>
-									<p style="margin-bottom: 2px; text-align: center;"><b style="font-size: 25px;">도로</b>를 만들어 자동차들이(전류) <b style="font-size: 25px;">신호등</b>의 지시에 따라 <b style="font-size: 25px;">문제 없이</b> 목적지까지 무사히 가게 하는</p>
-									<div class="parent">
-										<div class="task-tooltip1">Hardware 설계</div>
-										<div class="task-tooltip2">Firmware</div>
-										<div class="task-tooltip3">Debugging</div>
-									</div>
-									<br>
-									<br>
-									<p style="text-align: center;"><b style="font-size: 25px;">작은도시</b>를 개발하는 땜쟁이 강형 입니다.</p>
-									<div class="parent">
-										<div class="task-tooltip4">PCB</div>										
 									</div>
 								</article>
 
