--- a/pj6_data.html
+++ b/pj6_data.html
@@ -52,23 +52,51 @@
 							<h1 style="font-family: TitleFont"><a href="index.html">강형의 개발새발</a></h1>							
 						</div>
 
-					<!-- Nav -->
+						<!-- Nav -->
 						<nav id="nav">
-							<ul>									
-								<li>										
-									<a href="#">15년~20년</a>
-									<ul>
-										<li><a href="pj1_drillShip.html">드릴쉽 엔진 제어 프로젝트</a></li>
-										<li><a href="pj2_CPOT.html">COPT 프로젝트</a></li>
-										<li><a href="pj3_helideck.html">Helideck 프로젝트</a></li>
-										<li><a href="pj4_onshore.html">육상발전기 프로젝트</a></li>
-										<li><a href="pj5_avss.html">AVSS 프로젝트</a></li>
-										<li><a href="pj6_data.html">데이터 수집장치 프로젝트</a></li>
-									</ul>									
-								</li>
+							<ul>
+								<li><a href="index.html">Welcome</a></li>
+								<!-- 학업 -->
 								<li>
-									<a href="#">21년~현재</a>
+									<a href="study.html">학업</a>
+									<!-- <ul>
+										<li><a href="#">창원대 산업대학원</a>
+											<ul>
+												<li><a href="#">1학기(22년 후기)</a></li>
+											</ul>
+										</li>																												
+									</ul> -->
 								</li>
+								<!-- 직장 -->
+								<li class="current">
+									<a href="job_main.html">직장</a>										
+									<!-- <ul>
+										<li><a href="job_main.html">15년~20년</a></li>
+										<li><a href="21year.html">21년~현재</a></li>
+									</ul> -->
+								</li>
+								<!-- 취미 -->
+								<li>
+									<a href="hobby.html">일상 생활</a>
+									<!-- <ul>
+										<li><a href="#">게임</a></li>
+										<li><a href="#">낚시</a></li>											
+									</ul> -->
+								</li>
+								<!-- 미래 -->
+								<li>
+									<a href="future.html">미래</a>
+									<!-- <ul>
+										<li><a href="#">Firmware</a></li>
+										<li><a href="#">Deep Learning</a></li>
+									</ul> -->																		
+							</ul>							
+						</nav>
+
+						<nav id="nav3" style="margin-top: 4%; margin-right: 10%;">
+							<ul>
+								<li class="current"><a href="pj1_drillShip.html">15년~20년</a></li>
+								<li><a href="21year.html">21년~현재</a></li>
 							</ul>
 						</nav>
 
@@ -167,11 +195,11 @@
 						<div class="col-3 col-6-medium col-12-small">
 
 							<!-- Contact -->
-								<section class="widget contact last">
-									<h3>Contact Me</h3>										
-									<p>개발새발 개발하는 강형<br />
-									sjenrdj@gmail.com<br /> </p>										
-								</section>
+							<section class="widget contact last">
+								<h3>Contact Me</h3>										
+								<p>sjenrdj@gmail.com<br />
+								개발새발 개발하는 강형<br /> </p>										
+							</section>
 
 						</div>
 					</div>
