--- a/hobby.html
+++ b/hobby.html
@@ -114,7 +114,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby1.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">
-																<h2 style="margin-top: -20%; text-align: center;">가상 게임</h2>
+																<h2 style="margin-top: -5%; text-align: center;">가상 게임</h2>
 															</div>
 														</section>
 												</div>
@@ -124,7 +124,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby2.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">자전거</h2>																
+																<h2 style="margin-top: -5%; text-align: center;">자전거</h2>																
 															</div>
 														</section>
 												</div>
@@ -134,7 +134,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby9.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">음향</h2>
+																<h2 style="margin-top: -5%; text-align: center;">음향</h2>
 															</div>
 														</section>
 												</div>
@@ -144,7 +144,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby4.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">캠핑</h2>
+																<h2 style="margin-top: -5%; text-align: center;">캠핑</h2>
 															</div>
 														</section>
 												</div>
@@ -161,7 +161,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby6.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">
-																<h2 style="margin-top: -20%; text-align: center;">물고기 납치</h2>
+																<h2 style="margin-top: -5%; text-align: center;">물고기 납치</h2>
 															</div>
 														</section>
 												</div>
@@ -171,7 +171,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby7.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">곤충 납치</h2>																
+																<h2 style="margin-top: -5%; text-align: center;">곤충 납치</h2>																
 															</div>
 														</section>
 												</div>
@@ -181,7 +181,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\hobby8.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">새 납치</h2>
+																<h2 style="margin-top: -5%; text-align: center;">새 납치</h2>
 															</div>
 														</section>
 												</div>
@@ -191,7 +191,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\cat.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">고양이 납치</h2>
+																<h2 style="margin-top: -5%; text-align: center;">고양이 납치</h2>
 															</div>
 														</section>
 												</div>
@@ -207,7 +207,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\monkey.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">
-																<h2 style="margin-top: -20%; text-align: center;">원숭이 납치</h2>
+																<h2 style="margin-top: -5%; text-align: center;">원숭이 납치</h2>
 															</div>
 														</section>
 												</div>
@@ -217,7 +217,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\wedding.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">와이프 납치</h2>																
+																<h2 style="margin-top: -5%; text-align: center;">납치 당함</h2>																
 															</div>
 														</section>
 												</div>
@@ -227,7 +227,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\ship.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">배 납치</h2>
+																<h2 style="margin-top: -5%; text-align: center;">배 납치</h2>
 															</div>
 														</section>
 												</div>
@@ -237,7 +237,7 @@
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images\hobby\keyboard.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 															<div class="inner">											
-																<h2 style="margin-top: -20%; text-align: center;">키보드 정비</h2>
+																<h2 style="margin-top: -5%; text-align: center;">키보드 정비</h2>
 															</div>
 														</section>
 												</div>
