메인화면 버그 수정

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\study.png" style="max-width:100%; height: auto;" alt="" /></a>
+										<a href="study.html" class="image featured"><img src="images\study.png" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>학업</h2>											
 											<p>내 머리는 돌(SILICON)이다</p> 
@@ -142,9 +142,9 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\hobby.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+										<a href="hobby.html" class="image featured"><img src="images\hobby.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
-											<h2>취미</h2>
+											<h2>일상 생활</h2>
 											<p>나는 한량이 되고 싶다</p>											
 											<p>돈 많은 한량으로 취미를 즐기고 싶다</p>
 										</div>
@@ -156,7 +156,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images\feature.jpg" style="max-width:100%; height: auto;" alt="" /></a>
+										<a href="future.html" class="image featured"><img src="images\feature.jpg" style="max-width:100%; height: auto;" alt="" /></a>
 										<div class="inner">											
 											<h2>미래</h2>											
 											<p>휴먼</p>
